--- a/2.html
+++ b/2.html
@@ -1,22 +1,36 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Hello CSS!</title>
-  </head>
-  <body>
-    <h1><a href="index.HTML">WEB!</a></h1>
-    <ul>
-      <li><a href="1.html">에치티엠엘</a></li>
-      <li><a href="2.html">씨에쓰에쓰</a></li>
-      <li><a href="3.html">자바스크립트</a></li>
-    </ul>
-    <h2>씨에쓰에쓰</h2>
+<head>
+  <title>　にゃおん♡ </title>
+</head>
+<body bgcolor="fff5b3" align="center">
 
-    <p style="margin-top:70px;">
-      CSS가 없다면 페이지들이 너무 거지같을 것 <br>
-      태그정리를 생활화
-    </p>
-    <img src="000033.jpg" width="100%">
-  </body>
-</html>
+  <br><br><br><br><h1 align="center">
+    <font face="AlphaClouds" color="af1111">
+       Cat People! </h1>
+      <br><br><br>
+  <img src="catf.gif" width="300px">
+
+<h3><b><font face="Courier New " color="af1111">
+   Cat </h3>
+<ul>
+  <li><a href="eating.html">Eating Food</a></li>
+  <li><a href="Sooooo.html"> Sooooo Cute</a></li>
+  <li><a href="God.html" target="_blank"> God is Cat</a></li>
+</ul>
+<br><br><br><br>
+  <table border="0" bgcolor="#71f2a2" align="center">
+  <tr>
+    <td width="0" align="center"> miyao miyao mya</td>
+    <td width="150px" align="center">Mya Mya?</td>
+    <td colspan="3" width="300px" align="center"> <img src="cat 2.png" height="100px"> </td>
+  </tr>
+  <tr>
+    <td align="center" img="cat 2.jpg" width="59px" height="50px"> </td>
+    <td>Mya Mya?</td>
+    <td height="100px" align="center">Miyao!</td>
+    <td align="center"> mya </td>
+  </tr>
+  </table>
+<br>
+<br><br>
+  <a href="mailto:wwwmicom@naver.com" font face="helvetica" color="#aaa111">wwwmicom@naver.com</a>
+<br><br><br><br><br>
